gotools-testing/sql-parser/y.output

state 0
	$accept: .stmt_list $end 

	CREATE  shift 16
	DELETE  shift 12
	INSERT  shift 13
	REPLACE  shift 14
	SELECT  shift 11
	SET  shift 17
	UPDATE  shift 15
	.  error

	stmt_list  goto 1
	stmt  goto 2
	select_stmt  goto 3
	delete_stmt  goto 4
	insert_stmt  goto 5
	replace_stmt  goto 6
	update_stmt  goto 7
	create_database_stmt  goto 8
	create_table_stmt  goto 9
	set_stmt  goto 10

state 1
	$accept:  stmt_list.$end 
	stmt_list:  stmt_list.stmt ';' 

	$end  accept
	CREATE  shift 16
	DELETE  shift 12
	INSERT  shift 13
	REPLACE  shift 14
	SELECT  shift 11
	SET  shift 17
	UPDATE  shift 15
	.  error

	stmt  goto 18
	select_stmt  goto 3
	delete_stmt  goto 4
	insert_stmt  goto 5
	replace_stmt  goto 6
	update_stmt  goto 7
	create_database_stmt  goto 8
	create_table_stmt  goto 9
	set_stmt  goto 10

state 2
	stmt_list:  stmt.';' 

	';'  shift 19
	.  error


state 3
	stmt:  select_stmt.    (3)

	.  reduce 3 (src line 310)


state 4
	stmt:  delete_stmt.    (82)

	.  reduce 82 (src line 465)


state 5
	stmt:  insert_stmt.    (94)

	.  reduce 94 (src line 499)


state 6
	stmt:  replace_stmt.    (119)

	.  reduce 119 (src line 563)


state 7
	stmt:  update_stmt.    (123)

	.  reduce 123 (src line 584)


state 8
	stmt:  create_database_stmt.    (132)

	.  reduce 132 (src line 617)


state 9
	stmt:  create_table_stmt.    (137)

	.  reduce 137 (src line 631)


state 10
	stmt:  set_stmt.    (215)

	.  reduce 215 (src line 762)


state 11
	select_stmt:  SELECT.select_opts select_expr_list 
	select_stmt:  SELECT.select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list 
	select_opts: .    (28)

	.  reduce 28 (src line 361)

	select_opts  goto 20

state 12
	delete_stmt:  DELETE.delete_opts FROM NAME opt_where opt_orderby opt_limit 
	delete_stmt:  DELETE.delete_opts delete_list FROM table_references opt_where 
	delete_stmt:  DELETE.delete_opts FROM delete_list USING table_references opt_where 
	delete_opts: .    (87)

	.  reduce 87 (src line 476)

	delete_opts  goto 21

state 13
	insert_stmt:  INSERT.insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate 
	insert_stmt:  INSERT.insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate 
	insert_stmt:  INSERT.insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate 
	insert_opts: .    (98)

	.  reduce 98 (src line 512)

	insert_opts  goto 22

state 14
	replace_stmt:  REPLACE.insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate 
	replace_stmt:  REPLACE.insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate 
	replace_stmt:  REPLACE.insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate 
	insert_opts: .    (98)

	.  reduce 98 (src line 512)

	insert_opts  goto 23

state 15
	update_stmt:  UPDATE.update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit 
	update_opts: .    (125)
	insert_opts: .    (98)

	NAME  reduce 125 (src line 594)
	'('  reduce 125 (src line 594)
	.  reduce 98 (src line 512)

	insert_opts  goto 25
	update_opts  goto 24

state 16
	create_database_stmt:  CREATE.DATABASE opt_if_not_exists NAME 
	create_database_stmt:  CREATE.SCHEMA opt_if_not_exists NAME 
	create_table_stmt:  CREATE.opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' 
	create_table_stmt:  CREATE.opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' 
	create_table_stmt:  CREATE.opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement 
	create_table_stmt:  CREATE.opt_temporary TABLE opt_if_not_exists NAME create_select_statement 
	create_table_stmt:  CREATE.opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement 
	create_table_stmt:  CREATE.opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement 
	opt_temporary: .    (213)

	DATABASE  shift 26
	SCHEMA  shift 27
	TEMPORARY  shift 29
	.  reduce 213 (src line 756)

	opt_temporary  goto 28

state 17
	set_stmt:  SET.set_list 

	USERVAR  shift 32
	.  error

	set_list  goto 30
	set_expr  goto 31

state 18
	stmt_list:  stmt_list stmt.';' 

	';'  shift 33
	.  error


state 19
	stmt_list:  stmt ';'.    (1)

	.  reduce 1 (src line 304)


state 20
	select_stmt:  SELECT select_opts.select_expr_list 
	select_stmt:  SELECT select_opts.select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list 
	select_opts:  select_opts.ALL 
	select_opts:  select_opts.DISTINCT 
	select_opts:  select_opts.DISTINCTROW 
	select_opts:  select_opts.HIGH_PRIORITY 
	select_opts:  select_opts.STRAIGHT_JOIN 
	select_opts:  select_opts.SQL_SMALL_RESULT 
	select_opts:  select_opts.SQL_BIG_RESULT 
	select_opts:  select_opts.SQL_CALC_FOUND_ROWS 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	'*'  shift 44
	ALL  shift 35
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	DISTINCT  shift 36
	DISTINCTROW  shift 37
	EXISTS  shift 55
	HIGH_PRIORITY  shift 38
	SQL_BIG_RESULT  shift 41
	SQL_CALC_FOUND_ROWS  shift 42
	SQL_SMALL_RESULT  shift 40
	STRAIGHT_JOIN  shift 39
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	select_expr_list  goto 34
	expr  goto 45
	select_expr  goto 43

state 21
	delete_stmt:  DELETE delete_opts.FROM NAME opt_where opt_orderby opt_limit 
	delete_opts:  delete_opts.LOW_PRIORITY 
	delete_opts:  delete_opts.QUICK 
	delete_opts:  delete_opts.IGNORE 
	delete_stmt:  DELETE delete_opts.delete_list FROM table_references opt_where 
	delete_stmt:  DELETE delete_opts.FROM delete_list USING table_references opt_where 

	NAME  shift 71
	FROM  shift 66
	IGNORE  shift 69
	LOW_PRIORITY  shift 67
	QUICK  shift 68
	.  error

	delete_list  goto 70

state 22
	insert_stmt:  INSERT insert_opts.opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate 
	insert_opts:  insert_opts.LOW_PRIORITY 
	insert_opts:  insert_opts.DELAYED 
	insert_opts:  insert_opts.HIGH_PRIORITY 
	insert_opts:  insert_opts.IGNORE 
	insert_stmt:  INSERT insert_opts.opt_into NAME SET insert_asgn_list opt_ondupupdate 
	insert_stmt:  INSERT insert_opts.opt_into NAME opt_col_names select_stmt opt_ondupupdate 
	opt_into: .    (104)

	DELAYED  shift 74
	HIGH_PRIORITY  shift 75
	IGNORE  shift 76
	INTO  shift 77
	LOW_PRIORITY  shift 73
	.  reduce 104 (src line 519)

	opt_into  goto 72

state 23
	insert_opts:  insert_opts.LOW_PRIORITY 
	insert_opts:  insert_opts.DELAYED 
	insert_opts:  insert_opts.HIGH_PRIORITY 
	insert_opts:  insert_opts.IGNORE 
	replace_stmt:  REPLACE insert_opts.opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate 
	replace_stmt:  REPLACE insert_opts.opt_into NAME SET insert_asgn_list opt_ondupupdate 
	replace_stmt:  REPLACE insert_opts.opt_into NAME opt_col_names select_stmt opt_ondupupdate 
	opt_into: .    (104)

	DELAYED  shift 74
	HIGH_PRIORITY  shift 75
	IGNORE  shift 76
	INTO  shift 77
	LOW_PRIORITY  shift 73
	.  reduce 104 (src line 519)

	opt_into  goto 78

state 24
	update_stmt:  UPDATE update_opts.table_references SET update_asgn_list opt_where opt_orderby opt_limit 

	NAME  shift 83
	'('  shift 85
	.  error

	table_references  goto 79
	table_reference  goto 80
	table_factor  goto 81
	join_table  goto 82
	table_subquery  goto 84

state 25
	insert_opts:  insert_opts.LOW_PRIORITY 
	insert_opts:  insert_opts.DELAYED 
	insert_opts:  insert_opts.HIGH_PRIORITY 
	insert_opts:  insert_opts.IGNORE 
	update_opts:  insert_opts.LOW_PRIORITY 
	update_opts:  insert_opts.IGNORE 

	DELAYED  shift 74
	HIGH_PRIORITY  shift 75
	IGNORE  shift 87
	LOW_PRIORITY  shift 86
	.  error


state 26
	create_database_stmt:  CREATE DATABASE.opt_if_not_exists NAME 
	opt_if_not_exists: .    (135)

	IF  shift 89
	.  reduce 135 (src line 625)

	opt_if_not_exists  goto 88

state 27
	create_database_stmt:  CREATE SCHEMA.opt_if_not_exists NAME 
	opt_if_not_exists: .    (135)

	IF  shift 89
	.  reduce 135 (src line 625)

	opt_if_not_exists  goto 90

state 28
	create_table_stmt:  CREATE opt_temporary.TABLE opt_if_not_exists NAME '(' create_col_list ')' 
	create_table_stmt:  CREATE opt_temporary.TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' 
	create_table_stmt:  CREATE opt_temporary.TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement 
	create_table_stmt:  CREATE opt_temporary.TABLE opt_if_not_exists NAME create_select_statement 
	create_table_stmt:  CREATE opt_temporary.TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement 
	create_table_stmt:  CREATE opt_temporary.TABLE opt_if_not_exists NAME '.' NAME create_select_statement 

	TABLE  shift 91
	.  error


state 29
	opt_temporary:  TEMPORARY.    (214)

	.  reduce 214 (src line 757)


state 30
	set_stmt:  SET set_list.    (216)
	set_list:  set_list.',' set_expr 

	','  shift 92
	.  reduce 216 (src line 765)


state 31
	set_list:  set_expr.    (217)

	.  reduce 217 (src line 767)


state 32
	set_expr:  USERVAR.COMPARISON expr 
	set_expr:  USERVAR.ASSIGN expr 

	ASSIGN  shift 94
	COMPARISON  shift 93
	.  error


state 33
	stmt_list:  stmt_list stmt ';'.    (2)

	.  reduce 2 (src line 305)


state 34
	select_stmt:  SELECT select_opts select_expr_list.    (4)
	select_stmt:  SELECT select_opts select_expr_list.FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list 
	select_expr_list:  select_expr_list.',' select_expr 

	FROM  shift 95
	','  shift 96
	.  reduce 4 (src line 313)


state 35
	select_opts:  select_opts ALL.    (29)

	.  reduce 29 (src line 362)


state 36
	select_opts:  select_opts DISTINCT.    (30)

	.  reduce 30 (src line 363)


state 37
	select_opts:  select_opts DISTINCTROW.    (31)

	.  reduce 31 (src line 364)


state 38
	select_opts:  select_opts HIGH_PRIORITY.    (32)

	.  reduce 32 (src line 365)


state 39
	select_opts:  select_opts STRAIGHT_JOIN.    (33)

	.  reduce 33 (src line 366)


state 40
	select_opts:  select_opts SQL_SMALL_RESULT.    (34)

	.  reduce 34 (src line 367)


state 41
	select_opts:  select_opts SQL_BIG_RESULT.    (35)

	.  reduce 35 (src line 368)


state 42
	select_opts:  select_opts SQL_CALC_FOUND_ROWS.    (36)

	.  reduce 36 (src line 369)


state 43
	select_expr_list:  select_expr.    (37)

	.  reduce 37 (src line 372)


state 44
	select_expr_list:  '*'.    (39)

	.  reduce 39 (src line 374)


state 45
	select_expr:  expr.opt_as_alias 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.MOD expr 
	expr:  expr.ANDOP expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.COMPARISON expr 
	expr:  expr.COMPARISON '(' select_stmt ')' 
	expr:  expr.COMPARISON ANY '(' select_stmt ')' 
	expr:  expr.COMPARISON SOME '(' select_stmt ')' 
	expr:  expr.COMPARISON ALL '(' select_stmt ')' 
	expr:  expr.'|' expr 
	expr:  expr.'&' expr 
	expr:  expr.'^' expr 
	expr:  expr.SHIFT expr 
	expr:  expr.IS NULLX 
	expr:  expr.IS NOT NULLX 
	expr:  expr.IS BOOL 
	expr:  expr.IS NOT BOOL 
	expr:  expr.BETWEEN expr AND expr 
	expr:  expr.IN '(' val_list ')' 
	expr:  expr.NOT IN '(' val_list ')' 
	expr:  expr.IN '(' select_stmt ')' 
	expr:  expr.NOT IN '(' select_stmt ')' 
	expr:  expr.LIKE expr 
	expr:  expr.NOT LIKE expr 
	expr:  expr.REGEXP expr 
	expr:  expr.NOT REGEXP expr 
	opt_as_alias: .    (53)

	NAME  shift 119
	OR  shift 105
	XOR  shift 106
	ANDOP  shift 104
	IN  shift 114
	IS  shift 112
	LIKE  shift 116
	REGEXP  shift 117
	NOT  shift 115
	BETWEEN  shift 113
	COMPARISON  shift 107
	'|'  shift 108
	'&'  shift 109
	SHIFT  shift 111
	'+'  shift 98
	'-'  shift 99
	'*'  shift 100
	'/'  shift 101
	'%'  shift 102
	MOD  shift 103
	'^'  shift 110
	AS  shift 118
	.  reduce 53 (src line 401)

	opt_as_alias  goto 97

state 46
	expr:  NAME.    (221)
	expr:  NAME.'.' NAME 
	expr:  NAME.'(' opt_val_list ')' 

	'.'  shift 120
	'('  shift 121
	.  reduce 221 (src line 777)


state 47
	expr:  USERVAR.    (222)
	expr:  USERVAR.ASSIGN expr 

	ASSIGN  shift 122
	.  reduce 222 (src line 778)


state 48
	expr:  STRING.    (224)

	.  reduce 224 (src line 780)


state 49
	expr:  INTNUM.    (225)

	.  reduce 225 (src line 781)


state 50
	expr:  APPROXNUM.    (226)

	.  reduce 226 (src line 782)


state 51
	expr:  BOOL.    (227)

	.  reduce 227 (src line 783)


state 52
	expr:  '-'.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 123

state 53
	expr:  NOT.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 124

state 54
	expr:  '!'.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 125

state 55
	expr:  EXISTS.'(' select_stmt ')' 

	'('  shift 126
	.  error


state 56
	expr:  FCOUNT.'(' '*' ')' 
	expr:  FCOUNT.'(' expr ')' 

	'('  shift 127
	.  error


state 57
	expr:  FSUBSTRING.'(' val_list ')' 
	expr:  FSUBSTRING.'(' expr FROM expr ')' 
	expr:  FSUBSTRING.'(' expr FROM expr FOR expr ')' 

	'('  shift 128
	.  error


state 58
	expr:  FTRIM.'(' val_list ')' 
	expr:  FTRIM.'(' trim_ltb expr FROM val_list ')' 

	'('  shift 129
	.  error


state 59
	expr:  FDATE_ADD.'(' expr ',' interval_exp ')' 

	'('  shift 130
	.  error


state 60
	expr:  FDATE_SUB.'(' expr ',' interval_exp ')' 

	'('  shift 131
	.  error


state 61
	expr:  CASE.expr case_list END 
	expr:  CASE.expr case_list ELSE expr END 
	expr:  CASE.case_list END 
	expr:  CASE.case_list ELSE expr END 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	WHEN  shift 134
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	case_list  goto 133
	expr  goto 132

state 62
	expr:  CURRENT_TIMESTAMP.    (296)

	.  reduce 296 (src line 887)


state 63
	expr:  CURRENT_DATE.    (297)

	.  reduce 297 (src line 888)


state 64
	expr:  CURRENT_TIME.    (298)

	.  reduce 298 (src line 889)


state 65
	expr:  BINARY.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 135

state 66
	delete_stmt:  DELETE delete_opts FROM.NAME opt_where opt_orderby opt_limit 
	delete_stmt:  DELETE delete_opts FROM.delete_list USING table_references opt_where 

	NAME  shift 136
	.  error

	delete_list  goto 137

state 67
	delete_opts:  delete_opts LOW_PRIORITY.    (84)

	.  reduce 84 (src line 473)


state 68
	delete_opts:  delete_opts QUICK.    (85)

	.  reduce 85 (src line 474)


state 69
	delete_opts:  delete_opts IGNORE.    (86)

	.  reduce 86 (src line 475)


state 70
	delete_stmt:  DELETE delete_opts delete_list.FROM table_references opt_where 
	delete_list:  delete_list.',' NAME opt_dot_star 

	FROM  shift 138
	','  shift 139
	.  error


state 71
	delete_list:  NAME.opt_dot_star 
	opt_dot_star: .    (91)

	'.'  shift 141
	.  reduce 91 (src line 489)

	opt_dot_star  goto 140

state 72
	insert_stmt:  INSERT insert_opts opt_into.NAME opt_col_names VALUES insert_vals_list opt_ondupupdate 
	insert_stmt:  INSERT insert_opts opt_into.NAME SET insert_asgn_list opt_ondupupdate 
	insert_stmt:  INSERT insert_opts opt_into.NAME opt_col_names select_stmt opt_ondupupdate 

	NAME  shift 142
	.  error


state 73
	insert_opts:  insert_opts LOW_PRIORITY.    (99)

	.  reduce 99 (src line 513)


state 74
	insert_opts:  insert_opts DELAYED.    (100)

	.  reduce 100 (src line 514)


state 75
	insert_opts:  insert_opts HIGH_PRIORITY.    (101)

	.  reduce 101 (src line 515)


state 76
	insert_opts:  insert_opts IGNORE.    (102)

	.  reduce 102 (src line 516)


state 77
	opt_into:  INTO.    (103)

	.  reduce 103 (src line 519)


state 78
	replace_stmt:  REPLACE insert_opts opt_into.NAME opt_col_names VALUES insert_vals_list opt_ondupupdate 
	replace_stmt:  REPLACE insert_opts opt_into.NAME SET insert_asgn_list opt_ondupupdate 
	replace_stmt:  REPLACE insert_opts opt_into.NAME opt_col_names select_stmt opt_ondupupdate 

	NAME  shift 143
	.  error


state 79
	table_references:  table_references.',' table_reference 
	update_stmt:  UPDATE update_opts table_references.SET update_asgn_list opt_where opt_orderby opt_limit 

	SET  shift 145
	','  shift 144
	.  error


state 80
	table_references:  table_reference.    (41)
	join_table:  table_reference.opt_inner_cross JOIN table_factor opt_join_condition 
	join_table:  table_reference.STRAIGHT_JOIN table_factor 
	join_table:  table_reference.STRAIGHT_JOIN table_factor ON expr 
	join_table:  table_reference.left_or_right opt_outer JOIN table_factor join_condition 
	join_table:  table_reference.NATURAL opt_left_or_right_outer JOIN table_factor 
	opt_inner_cross: .    (59)

	CROSS  shift 151
	INNER  shift 150
	JOIN  reduce 59 (src line 417)
	LEFT  shift 152
	NATURAL  shift 149
	RIGHT  shift 153
	STRAIGHT_JOIN  shift 147
	.  reduce 41 (src line 379)

	opt_inner_cross  goto 146
	left_or_right  goto 148

state 81
	table_reference:  table_factor.    (43)

	.  reduce 43 (src line 383)


state 82
	table_reference:  join_table.    (44)

	.  reduce 44 (src line 384)


state 83
	table_factor:  NAME.opt_as_alias index_hint 
	table_factor:  NAME.'.' NAME opt_as_alias index_hint 
	opt_as_alias: .    (53)

	NAME  shift 119
	AS  shift 118
	'.'  shift 155
	.  reduce 53 (src line 401)

	opt_as_alias  goto 154

state 84
	table_factor:  table_subquery.opt_as NAME 
	opt_as: .    (50)

	AS  shift 157
	.  reduce 50 (src line 396)

	opt_as  goto 156

state 85
	table_factor:  '('.table_references ')' 
	table_subquery:  '('.select_stmt ')' 

	NAME  shift 83
	SELECT  shift 11
	'('  shift 85
	.  error

	table_references  goto 158
	select_stmt  goto 159
	table_reference  goto 80
	table_factor  goto 81
	join_table  goto 82
	table_subquery  goto 84

state 86
	insert_opts:  insert_opts LOW_PRIORITY.    (99)
	update_opts:  insert_opts LOW_PRIORITY.    (126)

	NAME  reduce 126 (src line 595)
	'('  reduce 126 (src line 595)
	.  reduce 99 (src line 513)


state 87
	insert_opts:  insert_opts IGNORE.    (102)
	update_opts:  insert_opts IGNORE.    (127)

	NAME  reduce 127 (src line 596)
	'('  reduce 127 (src line 596)
	.  reduce 102 (src line 516)


state 88
	create_database_stmt:  CREATE DATABASE opt_if_not_exists.NAME 

	NAME  shift 160
	.  error


state 89
	opt_if_not_exists:  IF.EXISTS 

	EXISTS  shift 161
	.  error


state 90
	create_database_stmt:  CREATE SCHEMA opt_if_not_exists.NAME 

	NAME  shift 162
	.  error


state 91
	create_table_stmt:  CREATE opt_temporary TABLE.opt_if_not_exists NAME '(' create_col_list ')' 
	create_table_stmt:  CREATE opt_temporary TABLE.opt_if_not_exists NAME '.' NAME '(' create_col_list ')' 
	create_table_stmt:  CREATE opt_temporary TABLE.opt_if_not_exists NAME '(' create_col_list ')' create_select_statement 
	create_table_stmt:  CREATE opt_temporary TABLE.opt_if_not_exists NAME create_select_statement 
	create_table_stmt:  CREATE opt_temporary TABLE.opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement 
	create_table_stmt:  CREATE opt_temporary TABLE.opt_if_not_exists NAME '.' NAME create_select_statement 
	opt_if_not_exists: .    (135)

	IF  shift 89
	.  reduce 135 (src line 625)

	opt_if_not_exists  goto 163

state 92
	set_list:  set_list ','.set_expr 

	USERVAR  shift 32
	.  error

	set_expr  goto 164

state 93
	set_expr:  USERVAR COMPARISON.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 165

state 94
	set_expr:  USERVAR ASSIGN.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 166

state 95
	select_stmt:  SELECT select_opts select_expr_list FROM.table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list 

	NAME  shift 83
	'('  shift 85
	.  error

	table_references  goto 167
	table_reference  goto 80
	table_factor  goto 81
	join_table  goto 82
	table_subquery  goto 84

state 96
	select_expr_list:  select_expr_list ','.select_expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 45
	select_expr  goto 168

state 97
	select_expr:  expr opt_as_alias.    (40)

	.  reduce 40 (src line 377)


state 98
	expr:  expr '+'.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 169

state 99
	expr:  expr '-'.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 170

state 100
	expr:  expr '*'.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 171

state 101
	expr:  expr '/'.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 172

state 102
	expr:  expr '%'.expr 

	NAME  shift 46
	STRING  shift 48
	INTNUM  shift 49
	BOOL  shift 51
	APPROXNUM  shift 50
	USERVAR  shift 47
	NOT  shift 53
	'!'  shift 54
	'-'  shift 52
	BINARY  shift 65
	CASE  shift 61
	CURRENT_DATE  shift 63
	CURRENT_TIME  shift 64
	CURRENT_TIMESTAMP  shift 62
	EXISTS  shift 55
	FSUBSTRING  shift 57
	FTRIM  shift 58
	FDATE_ADD  shift 59
	FDATE_SUB  shift 60
	FCOUNT  shift 56
	.  error

	expr  goto 173

state 103
	expr:  expr MOD.expr 
